--- a/e.html
+++ b/e.html
@@ -4,13 +4,16 @@
   <title>Mapa con sidebar y botón para mostrar información</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.css" />
   <!-- plugin jquery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>  
+  
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.EasyButton/2.4.0/easy-button.css" />
 
+  <link rel="stylesheet" href="leaflet-sidebar/src/L.Control.Sidebar.css" />
+  <script src="leaflet-sidebar/src/L.Control.Sidebar.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sidebar/0.2.2/js/sidebar.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sidebar/0.2.2/css/sidebar.css" />
+  
+  
   <style>
     #map {
       height: 400px;
@@ -19,11 +22,7 @@
 </head>
 <body>
   <div id="map"></div>
-
-  <script src="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.js"></script>
-
-
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://unpkg.com/leaflet@0.7.2/dist/leaflet.js"></script>
 
 
   <script>
@@ -31,19 +30,17 @@
     var map = L.map('map').setView([51.505, -0.09], 13);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors',
-      maxZoom: 18,
-    }).addTo(map);
+            maxZoom: 18,
+            attribution: 'Map data &copy; OpenStreetMap contributors'
+        }).addTo(map);
 
     // Crear sidebar
-    var side = L.control.sidebar({
-      autopan: false,
-      closeButton: true,
-      container: 'sidebar',
-      position: 'right'
+    var sidebar = L.control.sidebar({
+        autopan: false,       // whether to maintain the centered map point when opening the sidebar
+        closeButton: true,    // whether t add a close button to the panes
+        container: 'sidebar', // the DOM container or #ID of a predefined sidebar container that should be used
+        position: 'left',     // left or right
     }).addTo(map);
-
-
     sidebar
             .addPanel({
                 id:   'js-api',
